--- a/anfaq_elsoas.html
+++ b/anfaq_elsoas.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل | أنفاق قناة السويس</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div class="pre_loader">
+        <img src="./imgs/Egypt-xs.gif" alt="">
+    </div>
     <header>
         <div class="container">
             <a href="./" class="title">
@@ -65,52 +69,6 @@
                 <div class="IFuOkc"></div>
                 <div class="mYVXT">
                     <div class="LS81yb VICjCf j5pSsc db35Fc" tabindex="-1">
-                        <!-- <div
-                            class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc">
-                            <div class="JNdkSc-SmKAyb LkDMRd">
-                                <div class="" jscontroller="sGwD4d" jsaction="zXBUYb:zTPCnb;zQF9Uc:Qxe3nd;"
-                                    jsname="F57UId">
-                                    <div class="oKdM2c ZZyype Kzv0Me">
-                                        <div id="h.7a885a51f563c731_0"
-                                            class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c jXK9ad D2fZ2 zu5uec OjCsFc dmUFtb wHaque g5GTcb">
-                                            <div class="jXK9ad-SmKAyb">
-                                                <div class="tyJCtd OWlOyc baZpAe">
-                                                    <div jscontroller="VYKRW" jsaction="rcuQ6b:rcuQ6b;">
-                                                        <div class="WIdY2d M1aSXe"
-                                                            data-embed-doc-id="1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX"
-                                                            data-embed-open-url="https://drive.google.com/open?authuser=0&amp;id=1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX"
-                                                            data-embed-thumbnail-url="https://drive.google.com/thumbnail?authuser=0&amp;id=1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX&amp;sz=w715-h470-p-k-nu"
-                                                            data-embed-download-url="https://drive.google.com/uc?id=1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX&amp;export=download">
-                                                            <div jsname="WXxXjd" class="t5qrWd"></div><iframe
-                                                                jsname="L5Fo6c" jscontroller="usmiIb"
-                                                                jsaction="rcuQ6b:WYd;"
-                                                                class="YMEQtf L6cTce-purZT L6cTce-pSzOP"
-                                                                sandbox="allow-scripts allow-popups allow-forms allow-same-origin allow-popups-to-escape-sandbox allow-downloads allow-modals allow-storage-access-by-user-activation"
-                                                                frameborder="0"
-                                                                aria-label="Drive, انفاق قناة السويس الجديدة.mp4"
-                                                                allowfullscreen=""
-                                                                src="https://drive.google.com/file/d/1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX/preview?authuser=0"></iframe>
-                                                            <div class="TPTLxf"></div>
-                                                            <div class="JmGwdf SzkQif L6cTce-hJDwNd L6cTce-dQCS7c"
-                                                                role="link" tabindex="0" jsaction="click:QNTBYd"
-                                                                aria-label="Drive, انفاق قناة السويس الجديدة.mp4">
-                                                                <div class="t0pVcb">
-                                                                    <div class="TZchLb FQ4MFe"
-                                                                        style="background-image: url(https://drive.google.com/thumbnail?authuser=0&amp;id=1cmuH32-XIlYDzLoXEVfUPvf29wtqvpdX&amp;sz=w715-h470-p-k-nu);">
-                                                                    </div>
-                                                                </div>
-
-
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <div
                             class="hJDwNd-AhqUyc-qWD73c Ft7HRd-AhqUyc-qWD73c purZT-AhqUyc-II5mzb ZcASvf-AhqUyc-II5mzb pSzOP-AhqUyc-qWD73c Ktthjf-AhqUyc-qWD73c JNdkSc SQVYQc">
                             <div class="JNdkSc-SmKAyb LkDMRd">
@@ -160,7 +118,7 @@
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>أهمية مشروع أنفاق قناة السويس</h1>
                     <p>
                         تعد منطقة قناة السويس واحدة من أهم الممرات الملاحية في العالم، حيث تربط بين قارتي أوروبا وآسيا،
@@ -168,12 +126,12 @@
                         أصبح من الضروري إنشاء معابر حديثة ومتطورة لربط سيناء بالدلتا، مما يعزز التنمية في شبه جزيرة
                         سيناء ويدعم خطط الدولة لتعميرها واستغلال مواردها بشكل أمثل. </p>
                 </div>
-                <img src="./imgs/anfaq_1.jpeg" alt="">
+                <img src="./imgs/anfaq_1.jpeg" alt="" data-aos="fade-right">
             </div>
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>تفاصيل المشروع</h1>
                     <p>تم تنفيذ 4 أنفاق عملاقة تحت قناة السويس، في الإسماعيلية وبورسعيد، بهدف تسهيل حركة المرور بين ضفتي
                         القناة في أقل وقت ممكن، مقارنة بالاعتماد السابق على المعديات وكباري العبور العائمة. </p>
@@ -206,7 +164,7 @@
                     </p>
                 </div>
 
-                <div class="imgs dsk">
+                <div class="imgs dsk" data-aos="fade-right">
                     <img src="./imgs/anfaq_elsoas_2.jpeg" alt="">
                     <img src="./imgs/310.webp" alt="">
                     <img src="./imgs/ismalia_anfaq.jpg" alt="">
@@ -215,7 +173,7 @@
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1> العائدات الاقتصادية والتنموية
                     </h1>
                     <ul>
@@ -235,11 +193,23 @@
                             سيناء، مما يعزز الأمن القومي المصري. </li>
                     </ul>
                 </div>
-                <video src="./imgs/انفاق قناة السويس الجديدة.mp4" controls></video>
+                <video src="./imgs/انفاق قناة السويس الجديدة.mp4" controls data-aos="fade-right"></video>
             </div>
         </section>
     </main>
-
+    <footer>
+        <div class="container">
+            <h3>تمت التطوير بواسطة / <a href="./about_developer.html">عمر هاني البدويهي</a></h1>
+                <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 700,
+            once: true,
+        });
+    </script>
     <script src="./main.js"></script>
 </body>
 
