--- a/haql_zohr.html
+++ b/haql_zohr.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل | حقل ظهر</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
+    <div class="pre_loader">
+        <img src="./imgs/Egypt-xs.gif" alt="">
+    </div>
     <header>
         <div class="container">
             <a href="./" class="title">
@@ -100,18 +104,18 @@
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>     اكتشاف حقل ظهر وأهميته
                     </h1>
                     <p>
                         تم اكتشاف حقل ظهر عام 2015 في منطقة شمال البحر المتوسط، على بعد 190 كيلومترًا شمال مدينة بورسعيد، بواسطة شركة إيني الإيطالية. يُعد هذا الحقل أكبر اكتشاف للغاز في البحر المتوسط، حيث يحتوي على احتياطي يقدر بـ 30 تريليون قدم مكعب من الغاز الطبيعي، مما يجعله واحدًا من أكبر الحقول عالميًا.</p>
                 </div>
-                <img src="./imgs/178392382846420250102095706576.jpg" alt="">
+                <img src="./imgs/178392382846420250102095706576.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>إنجازات الرئيس <b>السيسي</b> في تنفيذ المشروع
 
                     </h1>
@@ -162,15 +166,15 @@
                 
                 
                 <div class="imgs dsk">
-                    <img src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="">
-                    <img src="./imgs/936.webp" alt="">
-                    <img src="./imgs/zohr_beneatahtea.jpg" alt="">
+                    <img src="./imgs/F2Nkfj0WYAA6g2A.jpg" alt="" data-aos="fade-right">
+                    <img src="./imgs/936.webp" alt="" data-aos="fade-right">
+                    <img src="./imgs/zohr_beneatahtea.jpg" alt="" data-aos="fade-right">
                 </div>
             </div>
         </section>
         <section>
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1> العائدات الاقتصادية والتنموية
                     </h1>
                     <ul>
@@ -181,10 +185,23 @@
                         <li>تعزيز الاستدامة البيئية باستخدام الغاز الطبيعي كمصدر طاقة نظيف بديلًا عن الوقود الأحفوري الملوث</li>
                     </ul>
                 </div>
-                <img src="./imgs/maxresdefault.jpg" alt="">
+                <img src="./imgs/maxresdefault.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
     </main>
+    <footer>
+        <div class="container">
+            <h3>تمت التطوير بواسطة / <a href="./about_developer.html">عمر هاني البدويهي</a></h1>
+                <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 700,
+            once: true,
+        });
+    </script>
     <script src="./main.js"></script>
 </body>
 
