--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>مصر المستقبل</title>
     <link rel="icon" type="image/x-icon" href="./imgs/favicon.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
     <link rel="stylesheet" href="./style.css">
-
 </head>
 
 <body>
+    <div class="pre_loader">
+        <img src="./imgs/Egypt-xs.gif" alt="">
+    </div>
     <header>
         <div class="container">
             <a href="./" class="title">
@@ -57,8 +60,8 @@
 
         <section id="way_to_change">
             <div class="container">
-                <div class="text">
-                    <h1>الطريق للتغير</h1>
+                <div class="text" data-aos="fade-left">
+                    <h1>الطريق للتغيير</h1>
                     <p>تعرف على المشاريع القومية التي تغير وجه مصر، من البنية التحتية إلى النقل والطاقة والتعليم،
                         إنجازات تضع مصر في مقدمة الدول المتقدمة، بفضل رؤية طموحة وقيادة حكيمة. في عهد الرئيس عبد
                         الفتاح السيسي، شهدت البلاد طفرة غير مسبوقة في التنمية المستدامة، حيث تم تنفيذ مشروعات عملاقة
@@ -66,13 +69,13 @@
                         العاصمة الإدارية الجديدة إلى أنفاق قناة السويس، ومن شبكة الطرق الحديثة إلى مدن الجيل الرابع،
                         تستمر مصر في بناء مستقبل أكثر إشراقًا وريادة على المستويين الإقليمي والعالمي. </p>
                 </div>
-                <img src="./imgs/way_to_change.jpg" alt="">
+                <img src="./imgs/way_to_change.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
 
         <section id="suez_canal_tunnels">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>أنفاق قناة السويس</h1>
                     <p>شهدت مصر طفرة في تنفيذ المشروعات القومية الكبرى خلال عهد الرئيس عبد الفتاح السيسي، وكان من
                         أبرزها أنفاق قناة السويس الجديدة، التي ساهمت في تحديث البنية التحتية وتعزيز التنمية
@@ -86,13 +89,13 @@
                     <a href="./anfaq_elsoas.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/أنفاق-قناة-السويس.jpg" alt="">
+                <img src="./imgs/أنفاق-قناة-السويس.jpg" data-aos="fade-right" alt="">
             </div>
         </section>
 
         <section id="new_administrative_capital">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>العاصمة الأدارية الجديدة</h1>
                     <p>
                         العاصمة الإدارية الجديدة مشروع قومي ضخم أطلقه الرئيس عبد الفتاح السيسي لتخفيف الضغط عن
@@ -108,13 +111,13 @@
                     <a href="./el3asma_eledarea.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/3asma.jpg" alt="">
+                <img src="./imgs/3asma.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
 
         <section id="new_alamein_city">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>مدينة العلمين الجديدة</h1>
                     <p>
                         مدينة العلمين الجديدة مشروع قومي ضخم أطلقه الرئيس عبد الفتاح السيسي، لتكون أول مدينة متكاملة
@@ -132,13 +135,13 @@
                     <a href="./el3alamen.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/3lamen.jpg" alt="">
+                <img src="./imgs/3lamen.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
 
         <section id="zohr_field">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>حقل ظهر</h1>
                     <p>
                         حقل ظهر هو أحد أكبر مشروعات الطاقة في تاريخ مصر، اكتشف عام 2015 في البحر المتوسط باحتياطي
@@ -156,13 +159,13 @@
                     <a href="./haql_zohr.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/haql_zohr.webp" alt="">
+                <img src="./imgs/haql_zohr.webp" alt="" data-aos="fade-right">
             </div>
         </section>
 
         <section id="new_suez_canal">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>قناة السويس الجديدة</h1>
                     <p>
                         قناة السويس الجديدة هي إنجاز استراتيجي يعزز مكانة مصر كمركز عالمي للتجارة، حيث تم تنفيذ
@@ -180,13 +183,13 @@
                     <a href="./qnat_elsoas.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/qnat_elsoas.jpg" alt="">
+                <img src="./imgs/qnat_elsoas.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
 
         <section id="elerhab">
             <div class="container">
-                <div class="text">
+                <div class="text" data-aos="fade-left">
                     <h1>مكافحة الإرهاب</h1>
                     <p>
                         تمثل مكافحة الإرهاب أولوية استراتيجية لمصر، حيث نجحت الحكومة والجيش في تحقيق إنجازات بارزة بفضل
@@ -200,7 +203,7 @@
                     <a href="./elerhab.html"
                         class="btn">أقرأ المزيد</a>
                 </div>
-                <img src="./imgs/elerhab.jpg" alt="">
+                <img src="./imgs/elerhab.jpg" alt="" data-aos="fade-right">
             </div>
         </section>
     </main>
@@ -210,7 +213,13 @@
                 <p>جميع الحقوق محفوظة لمسابقة نعم نسنطيع بوزارة التربية و التعليم 2024/2025</p>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            duration: 700,
+            once: true,
+        });
+    </script>
     <script src="./main.js"></script>
 </body>
 
